--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,22 @@
 spring:
   application:
     name: newApp
+  datasource:
+    url: jdbc:mysql://localhost:3306/newApp
+    username: root
+    password:
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+        ddl-auto: update
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        type: trace
 server:
   port: 8090
+
+
