change employee position and add interface EmployeeService

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ spring:
     name: newApp
   datasource:
     url: jdbc:mysql://localhost:3306/employees
-    username: root
-    password:
+    username: ahmed
+    password: ahmed
   jpa:
     properties:
       hibernate:
