--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,10 +6,8 @@ spring:
     username: ahmed
     password: ahmed
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
-        ddl-auto: update
+    hibernate:
+      ddl-auto: create-drop
 logging:
   level:
     org:
